# mcp-agent-example

./: .gitignore  README.md  call_mcp_tool.py  launch_mcp.ps1  mcp_agent.py  mini_tui_agent.py  pyproject.toml  slides.org  test_mcp_run.py  weather_mcp.py
.devcontainer/: devcontainer.json
.docker/: Dockerfile.dev  docker-compose-dev.yml
mcp/server/: fastmcp.py
